Additional minor edits.

--- a/leadership_across_cultures_contexts.Rmd
+++ b/leadership_across_cultures_contexts.Rmd
@@ -303,7 +303,7 @@ In groups of all subsistence types (e.g., hunter-gatherers, pastoralists) leader
 
 Leadership in residential subgroups (e.g., hunting party, work group) was relatively common among hunter-gatherers but relatively rare among agriculturists. Leadership at the surpacommunity level, in contrast, was relatively rare among hunter-gatherers but quite common among agriculturists. The only example of supracommunity leadership among hunter-gatherers was from the Andamanese, a group of populations of Negrito hunter-gatherers of the Andaman Islands  by @az02-001: p. 45, who discussed the roles of a "head chief" from a permanent residential location and their marginal influence over other, local residential leaders:
 
->Their domestic policy may be described as a communism modified by the authority, more or less nominal, of the chief. The head chief of a tribe is called maia igla and the elders, or sub-chiefs, i.e. those in authority over each community, consisting of from 20 to 50 individuals, maicla . The head chief, who usually resides at a permanent encampment, has authority over all the sub-chiefs, but his power, like theirs, is very limited. It is exercised mainly in organising meetings between the various communities belonging to his tribe, and in exerting influence in all questions affecting the welfare of his followers. It is the chief alone, as may be supposed, who directs the movements of a party while on hunting and fishing expeditions, or when migrating. It is usually through his intervention that disputes are settled, but he possesses no power to punish or enforce obedience to his wishes, it being left to all alike to take the law into their own hands when aggrieved. The aryoto and eremtaga in each tribe have their own head chief, who are independent the one of the other." 
+>Their domestic policy may be described as a communism modified by the authority, more or less nominal, of the chief. The head chief of a tribe is called maia igla and the elders, or sub-chiefs, i.e. those in authority over each community, consisting of from 20 to 50 individuals, maicla . The head chief, who usually resides at a permanent encampment, has authority over all the sub-chiefs, but his power, like theirs, is very limited. It is exercised mainly in organising meetings between the various communities belonging to his tribe, and in exerting influence in all questions affecting the welfare of his followers. It is the chief alone, as may be supposed, who directs the movements of a party while on hunting and fishing expeditions, or when migrating. It is usually through his intervention that disputes are settled, but he possesses no power to punish or enforce obedience to his wishes, it being left to all alike to take the law into their own hands when aggrieved. The aryoto and eremtaga in each tribe have their own head chief, who are independent the one of the other.
 
 Hunter-gatherers and pastoralists, populations more likely to experience high residential mobility [@wild_making_2019; @rigby_persistent_1985; @kelly_foraging_2013], exhibited greater relative frequencies of leadership within residential groups and kin groups. Pastoralists, however, rely in part on a highly defensible resource base (i.e., livestock) and exhibit leadership beyond the community more so than hunter-gatherers and on par with horticulturalists. Pastoral and horticultural populations often experience elevated rates of inter-group conflict relative to mobile hunter-gatherers and these results are consistent with a relationship between increased inter-group conflict and more elaborated political leadership systems [@ember_warfare_1992]. For example, among the Somali, a politically complex and socially stratified agro-pastoralists group distributed across the Horn of Africa, @mo04-021 (p. 58) notes that, "the Sultan does not lead the army of the tribe in war. He names a chief of the armed forces."
 
@@ -317,7 +317,7 @@ Our analysis identified several leader functions and qualities that were near cu
 
 Across a broad range of cultures and social contexts leaders are nearly universally high status males who are described as knowledgeable or intelligent and who are experienced and have a demonstrated history of previous accomplishments or special skills. They most frequently resolve conflicts within their respective groups while also providing important social functions, organizing cooperation among followers, providing counsel or input in followers' affairs, and distributing resources. @oc06-034 (p. 236) in describing kin group leaders among the Iban, small-scale highland horticulturalists primarily in Borneo and Sarawak, provides example of this suite of traits in leaders: 
 
->"Bravery may be considered as a means of acquiring status in what Freeman has identified as an egalitarian society. The leader of a longhouse, the tuai rumah, is elected by both men and women of the longhouse for his skills in oratory, warfare, and farming, and his familiarity with adat , or customary law, in order to resolve disputes (Freeman 1970:111). Although usually a man, women tuai rumah are not unknown. The tuai rumah must inspire the confidence of his followers and exemplify the qualities of bravery, endurance, and determination that are essential for survival. Skill in farming and warfare is important in the pioneering context, in which the tuai rumah leads a group to establish a new settlement. The tuai rumah has no authority to command others, but is empowered to resolve disputes through influence and by reference to custom." 
+>Bravery may be considered as a means of acquiring status in what Freeman has identified as an egalitarian society. The leader of a longhouse, the tuai rumah, is elected by both men and women of the longhouse for his skills in oratory, warfare, and farming, and his familiarity with adat , or customary law, in order to resolve disputes (Freeman 1970:111). Although usually a man, women tuai rumah are not unknown. The tuai rumah must inspire the confidence of his followers and exemplify the qualities of bravery, endurance, and determination that are essential for survival. Skill in farming and warfare is important in the pioneering context, in which the tuai rumah leads a group to establish a new settlement. The tuai rumah has no authority to command others, but is empowered to resolve disputes through influence and by reference to custom.
 
 See Figure \@ref(fig:varsupport). These qualities and functions correspond to those highlighted by several evolutionary theories of leadership which have drawn heavily on select ethnographic cases [@garfield_review_2019]. See the *Synthesis* section below.
 
@@ -357,7 +357,7 @@ Other variables in this subcluster indicated more generic group strategizing, su
 
 The larger organization subcluster included variables such as *Organize cooperation*, *Ritual functions*, and *Military command*. This subcluster aligns with the many evolutionary theories of leadership that emphasize the role of leaders in organizing collective actions [e.g., @hooper_theory_2010; @van_vugt_cognitive_2007; @glowacki_formation_2016; for review, see @garfield_evolutionary_2019]. In the ethnographic record such functions includes controlling and facilitating economic productivity and ensuring collective actions do not overlly conflict with individual or household-level goals, such as among the Tukano of the Braziallian Amazon, where @sq19-018 (p. 127) notes: 
 
->Wanano chieftainship entails control over three major aspects of village life: fishing resources, labor, and ritual. A mahsa wami must hold sway over all three areas to lead effectively. Inability to harvest and redistribute fish, for example, will make it difficult for the mahsa wami to mobilize and coordinate labor, Control, then, implies the obligation to redistribute. The chief mobilizes and coordinates communal labor, carefully balancing collective projects against individual work such as gardening, so that collective and individual labor do not conflict. I observed several kinds of community projects in Wanano villages, including the construction and maintenance of houses, the clearing and burning of gardens, and the intensive preparations for intersib po?oa exchange ceremonies.
+>Wanano chieftainship entails control over three major aspects of village life: fishing resources, labor, and ritual. A mahsa wami must hold sway over all three areas to lead effectively. Inability to harvest and redistribute fish, for example, will make it difficult for the mahsa wami to mobilize and coordinate labor. Control, then, implies the obligation to redistribute. The chief mobilizes and coordinates communal labor, carefully balancing collective projects against individual work such as gardening, so that collective and individual labor do not conflict. I observed several kinds of community projects in Wanano villages, including the construction and maintenance of houses, the clearing and burning of gardens, and the intensive preparations for intersib po?oa exchange ceremonies.
 
 ## Benefits and costs of leadership and followership
 
@@ -369,9 +369,9 @@ For both leaders and followers, in summary, individuals stood to lose what they 
 
 In general, our results conform to the characteristics of leaders that are emphasized in the literature on the evolution of leadership and provide broad cross-cultural support for several influential theoretical predictions [for review, see @garfield_evolutionary_2019]. Leaders in the ethnographic record are portrayed as generally prosocial, and serve to resolve conflicts and organize cooperation. Leaders also receive material, social, and reproductive benefits. There is also a "dominant" style of leadership involving physical formidability, fear, and aggression.
 
-One interesting pattern that has not been widely discussed in the evolutionary literature on leadership is the role of shamans and their intersection, in our results, with the dominant style of leadership. Our social costs cluster (Figure \@ref(fig:cluster)A) includes the *Supernatural* abilities variable. @winkelman1987cross found that in 47% of societies sampled from the HRAF ($n=43$) shamans were associated with providing decision-making services and associated with military power. Providing ritual functions and military leadership are common (documented in over 50% of societies here) functions leaders serve (see Figure \@ref(fig:varsupport)). Widespread preferences for egalitarianism and social equality are likely strong drivers of leader preferences across diverse societies [@cheng_dominance_2019], but shamanism and ritual based contexts represent a social domain in which ideologies support dominance-based leadership. 
+One interesting pattern that has not been widely discussed in the evolutionary literature on leadership is the role of shamans and their intersection, in our results, with the dominant style of leadership. Our social costs cluster (Figure \@ref(fig:cluster)A) includes the *Supernatural* abilities variable. @winkelman1987cross found that in 47% of societies sampled from the HRAF ($n = 43$) shamans were associated with providing decision-making services and associated with military power. Providing ritual functions and military leadership are common (documented in over 50% of societies here) functions leaders serve (see Figure \@ref(fig:varsupport)). Widespread preferences for egalitarianism and social equality are likely strong drivers of leader preferences across diverse societies [@cheng_dominance_2019], but shamanism and ritual based contexts represent a social domain in which ideologies support dominance-based leadership. 
 
-We also found a link between prestige-based leadership, which is associated with deference towards individuals with special skills, high intelligence, and accomplishments [@cheng_dominance_2019; @van_vugt_dual_2019; @henrich_evolution_2001], and charismatic leadership, which is associated with oratory skills, high charisma, confidence, and interpersonal skills [@grabo_charismatic_2016; @howell_role_2005]. See, Figure \@ref(fig:cluster)A, *Ability to provide social benefits* cluster. This suggests that these leadership strategies might be closely related across a broad range of societies and social contexts, or part of a broader strategy of social influence based on the provisioning of various benefits.
+We also found a link between prestige-based leadership, which is associated with deference towards accomplished individuals with expertise, special skills, and high intelligence [@cheng_dominance_2019; @henrich_evolution_2001], and charismatic leadership, which is associated with oratory skills, charismatic personality, confidence, and interpersonal skills [@grabo_charismatic_2016; @howell_role_2005]. See, Figure \@ref(fig:cluster)A, *Ability to provide social benefits* cluster. This suggests that these leadership strategies might be closely related across a broad range of societies and social contexts, or part of a broader strategy of social influence based on the provisioning of various benefits.
 
 The strong support for material and social benefits associated with leadership (Figure \@ref(fig:varsupportcb)) and the colinearity of measures associated with material wealth, social capital, and reproductive success (Figure \@ref(fig:cluster)A), suggests processes of leadership and followership might be strong drivers of the emergence and intergenerational transmission of inequality [@bowles_emergence_2010; @mattison_evolution_2016]. Various sources of material wealth and strategic or institutionalized processes of nepotism are widespread cross-culturally, including among many societies often described as "egalitarian." Theses results suggests anthropologists and economists investigating the emergence and evolution of inequality, including material, social, and reproductive dimensions, should incorporates and pay close attention to group processes and social strategies associated with leadership and followership. 
 
