Other edits in discussion sections, etc.

--- a/Leader2.bib
+++ b/Leader2.bib
@@ -597,6 +597,23 @@ Cooperation is potentially risky in a population where non-producing cheats can 
 	file = {Aktipis et al. - 2018 - Understanding cooperation through fitness interdep.pdf:/Users/hagen/Zotero/storage/XKCR54WG/Aktipis et al. - 2018 - Understanding cooperation through fitness interdep.pdf:application/pdf;Snapshot:/Users/hagen/Zotero/storage/VVRK8F2D/s41562-018-0378-4.html:text/html}
 }
 
+
+@article{mukhopadhyay_anthropological_1988,
+	title = {Anthropological studies of women's status revisited: 1977-1987.},
+	volume = {17},
+	issn = {0084-6570},
+	doi = {10.1146/annurev.an.17.100188.002333},
+	abstract = {This review focuses on studies of selected themes and theoretical issues relating to women's status published by anthropologists within the subdiscipline of cultural anthropology/ethnology from 1977 to 1987. The first section of the review seeks to determine what advances have been made in understanding the universality of gender asymmetry by looking at women's status in a cross-cultural manner. The next major section highlights major areas of concern in the ethnographic literature of the decade 1977-87, including economics, studies of sexuality, women's family roles, women's political activities, women's rituals, and women's culture. The third section reviews the development of the concept of women's "status" and looks at universal determinants of women's status such as differences from men in aggressive behavior, in strength, and in reproductive and economic roles. The next section reviews developing gender theory that moves beyond reproductive determinism to "deconstruct" gender concepts. A number of common themes that run through the various approaches to this research are identified. These include the fact that gender must be examined in its historical, economic, social, and conceptual framework. Ultimately, these themes require that the old and simple determinants of status, along with the concept itself, be viewed as complex, multidimensional processes.},
+	language = {eng},
+	journal = {Annu Rev Anthropol},
+	author = {Mukhopadhyay, C. C. and Higgins, P. J.},
+	year = {1988},
+	keywords = {Anthropology, Cultural, Social Behavior, UCARE 1, Mel's UCARE 1, Anthropology, Behavior, comparative study, Interpersonal Relations, Aggression, Cross-Cultural Comparison, Economics, Research, Social Sciences, Socioeconomic Factors, Violence, Women's Rights},
+	pages = {461--95},
+	annote = {The following values have no corresponding Zotero field:pub-location: UNITED STATESissn: 0084-6570coden: doi: 10.1146/annurev.an.17.100188.002333citation-id: Mukhopadhyay 1988accession-num: 12319976modified-date: 2014-05-09 21:38:49 +0700},
+	file = {Anthropological%20studies%20of%20wom:/Users/zgarf/Zotero/storage/42E35R5F/Anthropological studies of wom.pdf:application/pdf}
+}
+
 @article{koomen_chimpanzees_2018,
 	title = {Chimpanzees overcome the tragedy of the commons with dominance},
 	volume = {8},
