--- a/leadership_across_cultures_contexts.Rmd
+++ b/leadership_across_cultures_contexts.Rmd
@@ -315,7 +315,7 @@ Our analysis identified several leader functions and qualities that were near cu
 
 ### Universal dimensions
 
-Across a broad range of cultures and social contexts leaders are nearly universally high status males who are described as knowledgeable or intelligent and who are experienced and have a demonstrated history of previous accomplishments or special skills. They most frequently resolve conflicts within their respective groups while also providing important social functions, organizing cooperation among followers, providing counsel or input in followers' affairs, and distributing resources. @oc06-034 (p. 236) in describing kin group leaders among the Iban, small-scale highland horticulturalists primarily in Borneo and Sarawak, provides example of this suite of traits in leaders: 
+Across a broad range of cultures and social contexts leaders are nearly universally high status males who are described as knowledgeable or intelligent and who are experienced and have a demonstrated history of previous accomplishments or special skills. They most frequently resolve conflicts within their respective groups while also providing important social functions, organizing cooperation among followers, providing counsel or input in followers' affairs, and distributing resources. @oc06-034 (p. 236) in describing kin group leaders among the Iban, small-scale highland horticulturalists primarily in Borneo and Sarawak, provides example of this suite of traits in leaders (which also include elements of prestige-based and charismatic leadership discussed above): 
 
 >Bravery may be considered as a means of acquiring status in what Freeman has identified as an egalitarian society. The leader of a longhouse, the tuai rumah, is elected by both men and women of the longhouse for his skills in oratory, warfare, and farming, and his familiarity with adat , or customary law, in order to resolve disputes (Freeman 1970:111). Although usually a man, women tuai rumah are not unknown. The tuai rumah must inspire the confidence of his followers and exemplify the qualities of bravery, endurance, and determination that are essential for survival. Skill in farming and warfare is important in the pioneering context, in which the tuai rumah leads a group to establish a new settlement. The tuai rumah has no authority to command others, but is empowered to resolve disputes through influence and by reference to custom.
 
@@ -331,7 +331,7 @@ Several theories of leadership also emphasize the moral authority of leaders [e.
 
 Leadership and high social status are expected to be associated with particular suites of characteristics, which potentially vary by cultural or social context, personality, or via other inter-individual variation [@cheng_two_2013; @von_rueden_roots_2014; @hogan_personality_2020; @lukaszewski_extraversion_2015; @henrich_evolution_2001]. Exploratory cluster analyses reported here suggest multiple leadership phenotypes. 
 
-We performed hierarchical cluster analysis on our leader quality and leader function variables to determine if these variables formed theoretically meaningful categories. Variables were clustered together if they were positively correlated. Leader qualities formed two top-level clusters, which we identify as a *Material, social, and reproductive success* cluster, and a *Social orientation* cluster. See Figure \@ref(fig:cluster)A. Several of traits often co-occur. Among the Trobriands, horticulturalists in Papua New Guinea, @ol06-037 (p. 47 ) describes relationships between polygnyous marriages, increased wealth, and widespread social contacts: 
+We performed hierarchical cluster analysis on our leader quality and leader function variables to determine if these variables formed theoretically meaningful categories. Variables were clustered together if they were positively correlated. Leader qualities formed two top-level clusters, which we identify as a *Material, social, and reproductive success* cluster, and a *Social orientation* cluster. See Figure \@ref(fig:cluster)A. Several of traits often co-occur. Among the Trobriands, horticulturalists in Papua New Guinea, @ol06-037 (p. 47 ) describes relationships between polygynous marriages, increased wealth, and widespread social contacts: 
 
 >Chiefs managed unusually large quantities of resources and it is agreed that the basis of such wealth was polygamy. Rank was quite directly expressed in the number of wives. The chief of Omarakana had 16 wives in Malinowski's time, while his predecessor Enamakala had 19 in 1893 (Annual Report 1893-4:19). In 1950 despite long-established missionary activity, there were still 13 (Powell 1960: 136). In traditional Trobriand society it seems that all leaders of village clusters of guyau status became polygamists. An emerging leader might also expect to be given wives by traditional allies outside the cluster while he might demand them from traditional rivals of subordinate subclans (Powell 1960:136)...
 
@@ -355,7 +355,7 @@ The management cluster included many more variables, which were grouped into two
 
 Other variables in this subcluster indicated more generic group strategizing, such as *Strategic planning* and *Group representative* [@de_cremer_intergroup_2002]. In the absence of state-institutions local leaders are often tasked with managing various economic systems and providing social services.  
 
-The larger organization subcluster included variables such as *Organize cooperation*, *Ritual functions*, and *Military command*. This subcluster aligns with the many evolutionary theories of leadership that emphasize the role of leaders in organizing collective actions [e.g., @hooper_theory_2010; @van_vugt_cognitive_2007; @glowacki_formation_2016; for review, see @garfield_evolutionary_2019]. In the ethnographic record such functions includes controlling and facilitating economic productivity and ensuring collective actions do not overlly conflict with individual or household-level goals, such as among the Tukano of the Braziallian Amazon, where @sq19-018 (p. 127) notes: 
+The larger organization subcluster included variables such as *Organize cooperation*, *Ritual functions*, and *Military command*. This subcluster aligns with the many evolutionary theories of leadership that emphasize the role of leaders in organizing collective actions [e.g., @hooper_theory_2010; @van_vugt_cognitive_2007; @glowacki_formation_2016; for review, see @garfield_evolutionary_2019]. In the ethnographic record such functions includes controlling and facilitating economic productivity and ensuring collective actions do not overly conflict with individual or household-level goals, such as among the Tukano of the Brazilian Amazon, where @sq19-018 (p. 127) notes: 
 
 >Wanano chieftainship entails control over three major aspects of village life: fishing resources, labor, and ritual. A mahsa wami must hold sway over all three areas to lead effectively. Inability to harvest and redistribute fish, for example, will make it difficult for the mahsa wami to mobilize and coordinate labor. Control, then, implies the obligation to redistribute. The chief mobilizes and coordinates communal labor, carefully balancing collective projects against individual work such as gardening, so that collective and individual labor do not conflict. I observed several kinds of community projects in Wanano villages, including the construction and maintenance of houses, the clearing and burning of gardens, and the intensive preparations for intersib po?oa exchange ceremonies.
 
@@ -373,11 +373,13 @@ One interesting pattern that has not been widely discussed in the evolutionary l
 
 We also found a link between prestige-based leadership, which is associated with deference towards accomplished individuals with expertise, special skills, and high intelligence [@cheng_dominance_2019; @henrich_evolution_2001], and charismatic leadership, which is associated with oratory skills, charismatic personality, confidence, and interpersonal skills [@grabo_charismatic_2016; @howell_role_2005]. See, Figure \@ref(fig:cluster)A, *Ability to provide social benefits* cluster. This suggests that these leadership strategies might be closely related across a broad range of societies and social contexts, or part of a broader strategy of social influence based on the provisioning of various benefits.
 
-The strong support for material and social benefits associated with leadership (Figure \@ref(fig:varsupportcb)) and the colinearity of measures associated with material wealth, social capital, and reproductive success (Figure \@ref(fig:cluster)A), suggests processes of leadership and followership might be strong drivers of the emergence and intergenerational transmission of inequality [@bowles_emergence_2010; @mattison_evolution_2016]. Various sources of material wealth and strategic or institutionalized processes of nepotism are widespread cross-culturally, including among many societies often described as "egalitarian." Theses results suggests anthropologists and economists investigating the emergence and evolution of inequality, including material, social, and reproductive dimensions, should incorporates and pay close attention to group processes and social strategies associated with leadership and followership. 
+The strong support for material and social benefits associated with leadership (Figure \@ref(fig:varsupportcb)) and the colinearity of measures associated with material wealth, social capital, and reproductive success (Figure \@ref(fig:cluster)A), suggests processes of leadership and followership might be strong drivers of the emergence and intergenerational transmission of inequality [@bowles_emergence_2010; @mattison_evolution_2016]. Various sources of material wealth and strategic or institutionalized processes of nepotism are widespread cross-culturally, including among many societies often described as "egalitarian." Theses results suggests anthropologists and economists investigating the emergence and evolution of inequality, including material, social, and reproductive dimensions, should incorporate and pay close attention to group processes and social strategies associated with leadership and followership. 
 
 ## Limitations 
 
-This study is based on the ethnographic record. Our methods are designed to capture a broad range of ethnographic descriptions from a culturally representative, systematic sample. Nonetheless, these results are conditional upon the content ethnographers chose to discuss and the way they chose to discuss it. The ethnographic record is certainly an imperfect source of information on human cultural diversity and hence a limitation of the current results. We, however, view the existence of the ethnographic record and the availability and functionality of the eHRAF as an enormous benefit for comparative research, given many of the populations represented in these data no longer exist or live as they did during the time of much ethnographic description. Within these ethnographic descriptions there is a general male bias, which could reflect a male bias in community leadership or the more systemic male bias in the ethnographic record. These data are also biased towards cultural models (rather than descriptions of observed behavior) and community leadership; descriptions of kin group and residential group leadership are less frequent. The high proportion of text records discussing political group leaders could be attributable to our broad search strategy or the content of the ethnographic record of "leadership" more generally. 
+This study is based on the ethnographic record. Our methods are designed to capture a broad range of ethnographic descriptions from a culturally representative, systematic sample. Nonetheless, these results are conditional upon the content ethnographers chose to discuss and the way they chose to discuss it. The ethnographic record is certainly an imperfect source of information on human cultural diversity and hence a limitation of the current results. We, however, view the existence of the ethnographic record and the availability and functionality of the eHRAF as an enormous benefit for comparative research, given many of the populations represented in these data no longer exist or live as they did during the time of much ethnographic description. Within these ethnographic descriptions there is a general male bias, which could reflect a male bias in community leadership or the more systemic male bias in the ethnographic record [see @rosaldo_woman_1974; @mukhopadhyay_anthropological_1988]. These data are also biased towards cultural models (rather than descriptions of observed behavior) and community leadership; descriptions of kin group and residential group leadership are less frequent. The high proportion of text records discussing political group leaders could be attributable to our broad search strategy or the content of the ethnographic record of "leadership" more generally. 
+
+Another limitation lies in our ability to interpret the absence of evidence. We are confident that the cross-culturally frequent measures discussed here and strongly represented in the ethnographic record and hence very likely to represent broad cross-cultural patterns in human behavior and culture. We cannot strongly conclude, however, that the relatively infrequent measures identified here are truly infrequent dimensions of human behavior and culture, only that they are relatively less frequent in the ethnographic record. Nonetheless, results reported here provide a broad, comprehensive, and cross-cultural framework for future empirical and theoretical work to draw on. 
 
 # Conclusion
 
